--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand" href="{{ url_for('index') }}">Hikerz</a>
+        <a class="navbar-brand" href="{{ url_for('main.index') }}">Hikerz</a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
           <i class="fa fa-bars"></i>
@@ -32,13 +32,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+              <a class="nav-link" href="{{ url_for('main.index') }}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('about') }}">About</a>
+              <a class="nav-link" href="{{ url_for('.about') }}">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('add') }}">Add</a>
+              <a class="nav-link" href="{{ url_for('.add') }}">Add</a>
             </li>
           </ul>
         </div>
@@ -65,15 +65,15 @@
         <div class="col-lg-8 col-md-10 mx-auto">
         {% for post in posts %}
           <div class="post-preview">
-            <a href="{{ url_for('post', post_id=post.id) }}">
+            <a href="{{ url_for('.post', post_id=post.id) }}">
               <h2 class="post-title">
-                {{ post.title }}
+                {{ post.event_title }}
               </h2>
               <h3 class="post-subtitle">
                 {{ post.subtitle }}
               </h3>
             </a>
-            <p class="post-meta">Posted by {{ post.planner }} on {{ post.date_posted.strftime('%B %d, %Y') }}</p>
+            <p class="post-meta">Posted by {{ post.planner }} on {{ post.posted.strftime('%B %d, %Y') }}</p>
           </div>
           {% endfor %}
           <hr>
