--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -31,13 +31,13 @@
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('index') }}">Home</a>
+                <a class="nav-link" href="{{ url_for('.index') }}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('about') }}">About</a>
+                <a class="nav-link" href="{{ url_for('.about') }}">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('add') }}">Add</a>
+                <a class="nav-link" href="{{ url_for('.add') }}">Add</a>
               </li>
             </ul>
           </div>
