--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,24 +1,33 @@
-{% extends 'base.html'%}
-{% import 'bootstrap/wtf.html' as wtf%}
-
+{% extends 'base.html' %}
+{% import 'bootstrap/wtf.html' as wtf %}
 {% block content %}
-<div class="container">
-    <div class="row">
-      <div class= "col-md-2"> </div>
-      <div class="col-md-8">
-      <!--Flash message -->
-      {% for message in get_flashed_messages() %}
-        <div class="alert alert-danger">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
-        </div>
-      {% endfor %}
-      <!-- Login form -->
-      {{wtf.quick_form(login_form)}}
-      <p> Not a member? <a href="{{url_for('auth.register')}}">Subscribe here</a></p>
-     </div>
-     <div clas="col-md-2"> </div>
+<br>
+<div class="jumbotron jumbotron-fluid">
+<h1 style="text-align:center;">Sign In</h1>
+{% for message in get_flashed_messages() %}
+<div class="row">
+    <div class="com-md-4">
+
+    </div>
+    <div class="com-md-4">
+        <div class="alert alert-success">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+            </div>
+    </div>
+    <div class="com-md-4">
+
     </div>
 </div>
 
-{% endblock%}
+
+{% endfor %}
+<div class="row">
+    <div class="col-md-3" style="margin-left: 30%; color:black;">
+        {{wtf.quick_form(form)}}
+        <p style="text-align: center">New User? <a href="{{ url_for('auth.register') }}">Click to Register!</a></p>
+
+    </div>
+</div>
+</div>
+{% endblock %}
